internal/parser/planparserv2/generated/plan_parser.go
// Code generated from Plan.g4 by ANTLR 4.13.2. DO NOT EDIT.

package planparserv2 // Plan
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PlanParser struct {
	*antlr.BaseParser
}

var PlanParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func planParserInit() {
	staticData := &PlanParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "','", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='",
		"'>'", "'>='", "'=='", "'!='", "", "", "", "'+'", "'-'", "'*'", "'/'",
		"'%'", "'**'", "'<<'", "'>>'", "'&'", "'|'", "'^'", "", "", "", "",
		"'~'", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "'$meta'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "LBRACE", "RBRACE", "LT", "LE", "GT", "GE",
		"EQ", "NE", "LIKE", "EXISTS", "TEXTMATCH", "ADD", "SUB", "MUL", "DIV",
		"MOD", "POW", "SHL", "SHR", "BAND", "BOR", "BXOR", "AND", "OR", "ISNULL",
		"ISNOTNULL", "BNOT", "NOT", "IN", "EmptyArray", "JSONContains", "JSONContainsAll",
		"JSONContainsAny", "ArrayContains", "ArrayContainsAll", "ArrayContainsAny",
		"ArrayLength", "BooleanConstant", "IntegerConstant", "FloatingConstant",
		"Identifier", "Meta", "StringLiteral", "JSONIdentifier", "AS", "Whitespace",
		"Newline",
	}
	staticData.RuleNames = []string{
		"outputFuncCallArgument", "outputField", "expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PlanParserInit initializes any static state used to implement PlanParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPlanParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PlanParserInit() {
	staticData := &PlanParserStaticData
	staticData.once.Do(planParserInit)
}

// NewPlanParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPlanParser(input antlr.TokenStream) *PlanParser {
	PlanParserInit()
	this := new(PlanParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PlanParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Plan.g4"

	return this
}

// PlanParser tokens.
const (
	PlanParserEOF              = antlr.TokenEOF
	PlanParserT__0             = 1
	PlanParserT__1             = 2
	PlanParserT__2             = 3
	PlanParserT__3             = 4
	PlanParserT__4             = 5
	PlanParserLBRACE           = 6
	PlanParserRBRACE           = 7
	PlanParserLT               = 8
	PlanParserLE               = 9
	PlanParserGT               = 10
	PlanParserGE               = 11
	PlanParserEQ               = 12
	PlanParserNE               = 13
	PlanParserLIKE             = 14
	PlanParserEXISTS           = 15
	PlanParserTEXTMATCH        = 16
	PlanParserADD              = 17
	PlanParserSUB              = 18
	PlanParserMUL              = 19
	PlanParserDIV              = 20
	PlanParserMOD              = 21
	PlanParserPOW              = 22
	PlanParserSHL              = 23
	PlanParserSHR              = 24
	PlanParserBAND             = 25
	PlanParserBOR              = 26
	PlanParserBXOR             = 27
	PlanParserAND              = 28
	PlanParserOR               = 29
	PlanParserISNULL           = 30
	PlanParserISNOTNULL        = 31
	PlanParserBNOT             = 32
	PlanParserNOT              = 33
	PlanParserIN               = 34
	PlanParserEmptyArray       = 35
	PlanParserJSONContains     = 36
	PlanParserJSONContainsAll  = 37
	PlanParserJSONContainsAny  = 38
	PlanParserArrayContains    = 39
	PlanParserArrayContainsAll = 40
	PlanParserArrayContainsAny = 41
	PlanParserArrayLength      = 42
	PlanParserBooleanConstant  = 43
	PlanParserIntegerConstant  = 44
	PlanParserFloatingConstant = 45
	PlanParserIdentifier       = 46
	PlanParserMeta             = 47
	PlanParserStringLiteral    = 48
	PlanParserJSONIdentifier   = 49
	PlanParserAS               = 50
	PlanParserWhitespace       = 51
	PlanParserNewline          = 52
)

// PlanParser rules.
const (
	PlanParserRULE_outputFuncCallArgument = 0
	PlanParserRULE_outputField            = 1
	PlanParserRULE_expr                   = 2
)

// IOutputFuncCallArgumentContext is an interface to support dynamic dispatch.
type IOutputFuncCallArgumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsOutputFuncCallArgumentContext differentiates from other interfaces.
	IsOutputFuncCallArgumentContext()
}

type OutputFuncCallArgumentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOutputFuncCallArgumentContext() *OutputFuncCallArgumentContext {
	var p = new(OutputFuncCallArgumentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PlanParserRULE_outputFuncCallArgument
	return p
}

func InitEmptyOutputFuncCallArgumentContext(p *OutputFuncCallArgumentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PlanParserRULE_outputFuncCallArgument
}

func (*OutputFuncCallArgumentContext) IsOutputFuncCallArgumentContext() {}

func NewOutputFuncCallArgumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OutputFuncCallArgumentContext {
	var p = new(OutputFuncCallArgumentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PlanParserRULE_outputFuncCallArgument

	return p
}

func (s *OutputFuncCallArgumentContext) GetParser() antlr.Parser { return s.parser }

func (s *OutputFuncCallArgumentContext) CopyAll(ctx *OutputFuncCallArgumentContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *OutputFuncCallArgumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OutputFuncCallArgumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type FuncCallMulContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallMulContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallMulContext {
	var p = new(FuncCallMulContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallMulContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallMulContext) MUL() antlr.TerminalNode {
	return s.GetToken(PlanParserMUL, 0)
}

func (s *FuncCallMulContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallMul(s)

	default:
		return t.VisitChildren(s)
	}
}

type FuncCallFloatingContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallFloatingContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallFloatingContext {
	var p = new(FuncCallFloatingContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallFloatingContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallFloatingContext) FloatingConstant() antlr.TerminalNode {
	return s.GetToken(PlanParserFloatingConstant, 0)
}

func (s *FuncCallFloatingContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallFloating(s)

	default:
		return t.VisitChildren(s)
	}
}

type FuncCallIntegerContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallIntegerContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallIntegerContext {
	var p = new(FuncCallIntegerContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallIntegerContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallIntegerContext) IntegerConstant() antlr.TerminalNode {
	return s.GetToken(PlanParserIntegerConstant, 0)
}

func (s *FuncCallIntegerContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallInteger(s)

	default:
		return t.VisitChildren(s)
	}
}

type FuncCallBooleanContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallBooleanContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallBooleanContext {
	var p = new(FuncCallBooleanContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallBooleanContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallBooleanContext) BooleanConstant() antlr.TerminalNode {
	return s.GetToken(PlanParserBooleanConstant, 0)
}

func (s *FuncCallBooleanContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallBoolean(s)

	default:
		return t.VisitChildren(s)
	}
}

type FuncCallIdentifierContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallIdentifierContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallIdentifierContext {
	var p = new(FuncCallIdentifierContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallIdentifierContext) Identifier() antlr.TerminalNode {
	return s.GetToken(PlanParserIdentifier, 0)
}

func (s *FuncCallIdentifierContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallIdentifier(s)

	default:
		return t.VisitChildren(s)
	}
}

type FuncCallStringContext struct {
	OutputFuncCallArgumentContext
}

func NewFuncCallStringContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallStringContext {
	var p = new(FuncCallStringContext)

	InitEmptyOutputFuncCallArgumentContext(&p.OutputFuncCallArgumentContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFuncCallArgumentContext))

	return p
}

func (s *FuncCallStringContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallStringContext) StringLiteral() antlr.TerminalNode {
	return s.GetToken(PlanParserStringLiteral, 0)
}

func (s *FuncCallStringContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallString(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PlanParser) OutputFuncCallArgument() (localctx IOutputFuncCallArgumentContext) {
	localctx = NewOutputFuncCallArgumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PlanParserRULE_outputFuncCallArgument)
	p.SetState(12)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PlanParserIdentifier:
		localctx = NewFuncCallIdentifierContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(6)
			p.Match(PlanParserIdentifier)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PlanParserMUL:
		localctx = NewFuncCallMulContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(7)
			p.Match(PlanParserMUL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PlanParserIntegerConstant:
		localctx = NewFuncCallIntegerContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(8)
			p.Match(PlanParserIntegerConstant)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PlanParserFloatingConstant:
		localctx = NewFuncCallFloatingContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(9)
			p.Match(PlanParserFloatingConstant)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PlanParserBooleanConstant:
		localctx = NewFuncCallBooleanContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(10)
			p.Match(PlanParserBooleanConstant)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PlanParserStringLiteral:
		localctx = NewFuncCallStringContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(11)
			p.Match(PlanParserStringLiteral)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IOutputFieldContext is an interface to support dynamic dispatch.
type IOutputFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsOutputFieldContext differentiates from other interfaces.
	IsOutputFieldContext()
}

type OutputFieldContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOutputFieldContext() *OutputFieldContext {
	var p = new(OutputFieldContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PlanParserRULE_outputField
	return p
}

func InitEmptyOutputFieldContext(p *OutputFieldContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PlanParserRULE_outputField
}

func (*OutputFieldContext) IsOutputFieldContext() {}

func NewOutputFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OutputFieldContext {
	var p = new(OutputFieldContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PlanParserRULE_outputField

	return p
}

func (s *OutputFieldContext) GetParser() antlr.Parser { return s.parser }

func (s *OutputFieldContext) CopyAll(ctx *OutputFieldContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *OutputFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OutputFieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type FuncCallOFieldContext struct {
	OutputFieldContext
}

func NewFuncCallOFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FuncCallOFieldContext {
	var p = new(FuncCallOFieldContext)

	InitEmptyOutputFieldContext(&p.OutputFieldContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFieldContext))

	return p
}

func (s *FuncCallOFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncCallOFieldContext) AllIdentifier() []antlr.TerminalNode {
	return s.GetTokens(PlanParserIdentifier)
}

func (s *FuncCallOFieldContext) Identifier(i int) antlr.TerminalNode {
	return s.GetToken(PlanParserIdentifier, i)
}

func (s *FuncCallOFieldContext) AllOutputFuncCallArgument() []IOutputFuncCallArgumentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOutputFuncCallArgumentContext); ok {
			len++
		}
	}

	tst := make([]IOutputFuncCallArgumentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOutputFuncCallArgumentContext); ok {
			tst[i] = t.(IOutputFuncCallArgumentContext)
			i++
		}
	}

	return tst
}

func (s *FuncCallOFieldContext) OutputFuncCallArgument(i int) IOutputFuncCallArgumentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOutputFuncCallArgumentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOutputFuncCallArgumentContext)
}

func (s *FuncCallOFieldContext) AS() antlr.TerminalNode {
	return s.GetToken(PlanParserAS, 0)
}

func (s *FuncCallOFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitFuncCallOField(s)

	default:
		return t.VisitChildren(s)
	}
}

type MetaOFieldContext struct {
	OutputFieldContext
}

func NewMetaOFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MetaOFieldContext {
	var p = new(MetaOFieldContext)

	InitEmptyOutputFieldContext(&p.OutputFieldContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFieldContext))

	return p
}

func (s *MetaOFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetaOFieldContext) Meta() antlr.TerminalNode {
	return s.GetToken(PlanParserMeta, 0)
}

func (s *MetaOFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitMetaOField(s)

	default:
		return t.VisitChildren(s)
	}
}

type AllOFieldContext struct {
	OutputFieldContext
}

func NewAllOFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *AllOFieldContext {
	var p = new(AllOFieldContext)

	InitEmptyOutputFieldContext(&p.OutputFieldContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFieldContext))

	return p
}

func (s *AllOFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AllOFieldContext) MUL() antlr.TerminalNode {
	return s.GetToken(PlanParserMUL, 0)
}

func (s *AllOFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitAllOField(s)

	default:
		return t.VisitChildren(s)
	}
}

type IdentifierOFieldContext struct {
	OutputFieldContext
}

func NewIdentifierOFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IdentifierOFieldContext {
	var p = new(IdentifierOFieldContext)

	InitEmptyOutputFieldContext(&p.OutputFieldContext)
	p.parser = parser
	p.CopyAll(ctx.(*OutputFieldContext))

	return p
}

func (s *IdentifierOFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentifierOFieldContext) AllIdentifier() []antlr.TerminalNode {
	return s.GetTokens(PlanParserIdentifier)
}

func (s *IdentifierOFieldContext) Identifier(i int) antlr.TerminalNode {
	return s.GetToken(PlanParserIdentifier, i)
}

func (s *IdentifierOFieldContext) AS() antlr.TerminalNode {
	return s.GetToken(PlanParserAS, 0)
}

func (s *IdentifierOFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PlanVisitor:
		return t.VisitIdentifierOField(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PlanParser) OutputField() (localctx IOutputFieldContext) {
	localctx = NewOutputFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PlanParserRULE_outputField)
	var _la int

	var _alt int

	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		localctx = NewIdentifierOFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(14)
			p.Match(PlanParserIdentifier)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(17)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == PlanParserAS {
			{
				p.SetState(15)
				p.Match(PlanParserAS)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(16)
				p.Match(PlanParserIdentifier)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 2:
		localctx = NewMetaOFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(19)
			p.Match(PlanParserMeta)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		localctx = NewAllOFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(20)
			p.Match(PlanParserMUL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 4:
		localctx = NewFuncCallOFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(21)
			p.Match(PlanParserIdentifier)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(22)
			p.Match(PlanParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(34)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&413416372568064) != 0 {
			{
				p.SetState(23)
				p.OutputFuncCallArgument()
			}
			p.SetState(28)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
			if p.HasError() {
				goto errorExit
			}
			for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
				if _alt == 1 {
					{
						p.SetState(24)
						p.Match(PlanParserT__1)
						if p.HasError() {
							// Recognition error - abort rule
							goto errorExit
						}
					}
					{
						p.SetState(25)
						p.OutputFuncCallArgument()
					}

				}
				p.SetState(30)
				p.GetErrorHandler().Sync(p)
				if p.HasError() {
					goto errorExit
				}
				_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
				if p.HasError() {
					goto errorExit
				}
			}
			p.SetState(32)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
